@@ -1,5 +1,6 @@
 Version 0.93 - 17 August 2012, by Per Øyvind Karlsen <peroyvind@mandriva.org>
 
+- handle drivers needing firmware (mga#1471, mga#3421)
 - handle drivers needing SSE
 - convert mouse helper to use udevadm in order to work with udev 175+
 - default to 24bit with QXL driver (16 bit doesn't work)
